[metadata]
name = browse-ocrd
version = attr: ocrd_browser.__version__
description = An extensible viewer for OCR-D workspaces
author = Johannes Künsebeck
author_email = kuensebeck@googlemail.com
url = https://github.com/hnesk/browse-ocrd
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    OCR
    OCR-D
    mets
    PAGE Xml
license = MIT License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: GTK
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition

[options]
python_requires = >=3.7
install_requires = file:requirements.txt
setup_requires =
    wheel
    fastentrypoints
packages = find:

include_package_data = True

[options.packages.find]
include =
    ocrd_browser*

[options.package_data]
* = *.gresource, *.ui, *.xml


[options.entry_points]
console_scripts =
    browse-ocrd = ocrd_browser.main:main
ocrd_browser_view =
    xml = ocrd_browser.view:ViewXml
    html = ocrd_browser.view:ViewHtml
    text = ocrd_browser.view:ViewText
    images = ocrd_browser.view:ViewImages
    diff = ocrd_browser.view:ViewDiff
    page = ocrd_browser.view:ViewPage




[flake8]
ignore=E501
exclude=tests/assets/__init__.py

[mypy]
warn_return_any = True
warn_unused_configs = True
warn_unreachable = True
warn_redundant_casts = True
warn_unused_ignores = True
implicit_reexport = False
disallow_any_generics = True
strict_optional = False
disallow_untyped_defs = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-cv2]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-gi.*]
ignore_missing_imports = True
follow_imports = skip

[mypy-lxml.etree]
ignore_missing_imports = True

[mypy-ocrd]
ignore_missing_imports = True

[mypy-ocrd_models.*]
ignore_missing_imports = True

[mypy-ocrd_modelfactory.*]
ignore_missing_imports = True

[mypy-ocrd_utils.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[codespell]
skip = ./tests/assets,./tests/example,venv,repo,.mypy_cache,build,.git,browse_ocrd.egg-info
count =
quiet-level = 3